# scout_ros

./: .gitignore  README.md
project1/: CMakeLists.txt  Instructions.pptx  instructions.txt  package.xml  scout_rviz.rviz
project1/cfg/: parameters.cfg
project1/config/: plot_layout.xml  rototranslation.m  scout_rviz.rviz
project1/launch/: scout_launch.launch  scout_launch2.launch  scout_launch3.launch  scout_launch_bag.launch  scout_launch_rviz.launch
project1/msg/: OdomInt.msg  er_array.msg
project1/plotjuggler_data/: plot_layout2.xml  rototranslation.m
project1/src/: odompubsub.cpp  resetodomClient.cpp  resetodomServer.cpp  residuals.cpp  velpubsub.cpp
project1/srv/: resetOdom.srv
project2/: CMakeLists.txt  package.xml
project2/bag_folder/: Add_bags.txt
project2/config/: amcl.rviz  gmapping.rviz
project2/data/: map1.yaml
project2/launch/: IMUfilter.launch  amcl.launch.xml  amcl_TEMPLATE.launch  ekl_localization.launch  gmapping.launch  gmapping.launch.xml  gmapping_TEMPLATE.launch  gmapping_bag.launch  localization.launch  localization_TEMPLATE.launch  localization_bag.launch  localization_bag3.launch  transforms.launch  transforms2.launch
